# iMSTK

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  Doxyfile  LICENSE  NOTICE.txt  README.md  SConstruct  SolversModule-Sreekanth.patch  iMSTKConfig.cmake.in  mkdocs.yml  patchfile.patch
Collision/: CMakeLists.txt  CollisionMoller.cpp  CollisionMoller.h  CollisionUtilities.cpp  MeshCollisionModel.cpp  MeshCollisionModel.h  MeshToMeshCollision.cpp  MeshToMeshCollision.h  OctreeCell.cpp  OctreeCell.h  PlaneCollisionModel.cpp  PlaneCollisionModel.h  PlaneToMeshCollision.cpp  PlaneToMeshCollision.h  SpatialHashCollision.cpp  SpatialHashCollision.h  SurfaceTree.h  SurfaceTree.hpp  SurfaceTreeCell.h  SurfaceTreeIterator.h
ContactHandling/: CMakeLists.txt  PenaltyContactFemToStatic.cpp  PenaltyContactFemToStatic.h  PenaltyContactHandling.cpp  PenaltyContactHandling.h
Core/: AnalyticalGeometry.cpp  AnalyticalGeometry.h  BaseMesh.cpp  BaseMesh.h  CMakeLists.txt  CollisionConfig.cpp  CollisionConfig.h  CollisionDetection.cpp  CollisionDetection.h  CollisionManager.cpp  CollisionManager.h  CollisionModelIterator.h  CollisionPair.cpp  CollisionPair.h  Color.cpp  Color.h  Config.h  ConfigRendering.h  ContactHandling.cpp  ContactHandling.h  CoreClass.cpp  CoreClass.h  DataStructures.h  DataStructures.hpp  Dispatcher.cpp  Dispatcher.h  DisplayText.cpp  DisplayText.h  ErrorLog.cpp  ErrorLog.h  Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  Factory.h  Factory.hpp  Geometry.cpp  Geometry.h  IOStream.cpp  IOStream.h  (+38 more)
Devices/: ADUInterface.cpp  ADUInterface.h  AduHid.h  Audio.h  CMakeLists.txt  DeviceInterface.cpp  DeviceInterface.h  HapticInterface.cpp  HapticInterface.h  NIDAQmx.h  NIUSB6008Interface.cpp  NIUSB6008Interface.h  PhantomInterface.cpp  PhantomInterface.h  VRPNDeviceClient.cpp  VRPNDeviceClient.h  VRPNDeviceServer.cpp  VRPNDeviceServer.h  VRPNForceDevice.cpp  VRPNForceDevice.h  VRPNPhantomDevice.cpp  VRPNPhantomDevice.h
Event/: AudioEvent.cpp  AudioEvent.h  CMakeLists.txt  CameraEvent.cpp  CameraEvent.h  HapticEvent.cpp  HapticEvent.h  Key.h  KeySFMLInterface.h  KeyboardEvent.cpp  KeyboardEvent.h  LightMotionEvent.cpp  LightMotionEvent.h  MouseButtonEvent.cpp  MouseButtonEvent.h  MouseMoveEvent.cpp  MouseMoveEvent.h  ObjectClickedEvent.cpp  ObjectClickedEvent.h
Examples/: CMakeLists.txt
IO/: CMakeLists.txt  IO.h  IOConfig.h  IOMesh.cpp  IOMesh.h  IOMesh3dsDelegate.cpp  IOMeshAssimpDelegate.cpp  IOMeshDelegate.cpp  IOMeshDelegate.h  IOMeshVTKDelegate.cpp  IOMeshVegaDelegate.cpp  InitIO.cpp  InitIO.h  initIO.cpp  initIO.h
Mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshMap.cpp  MeshMap.h  MeshMapAffine.cpp  MeshMapAffine.h  MeshMapTetToSurface.cpp  MeshMapTetToSurface.h  SurfaceMesh.cpp  SurfaceMesh.h  VegaSceneObject.cpp  VegaSceneObject.h  VegaSceneObjectDeformable.cpp  VegaSceneObjectDeformable.h  VegaSceneObjectWithRestPosition.cpp  VegaSceneObjectWithRestPosition.h  VegaVolumetricMesh.cpp  VegaVolumetricMesh.h  VolumeMesh.cpp  VolumeMesh.h
RenderDelegates/: AABBRenderDelegate.cpp  CMakeLists.txt  Config.h  FemSceneRenderDelegate.cpp  InitRenderDelegates.cpp  InitRenderDelegates.h  MeshRenderDelegate.cpp  PBDSurfaceRenderDelegate.cpp  PlaneRenderDelegate.cpp  SceneObjectDeformableRenderDelegate.cpp  StaticSceneObjectRenderDelegate.cpp  StylusRenderDelegate.cpp  SurfaceTreeRenderDelegate.cpp  initRenderDelegates.cpp  initRenderDelegates.h
Rendering/: CMakeLists.txt  Camera.cpp  Camera.h  ConfigRendering.cpp  CustomRenderer.h  FrameBuffer.cpp  FrameBuffer.h  GLRenderer.cpp  GLUtils.cpp  GLUtils.h  InitVTKRendering.cpp  InitVTKRendering.h  MeshNodalCoordinates.h  MeshNodalCoordinates.hpp  MetalShader.cpp  MetalShader.h  OculusViewer.cpp  OculusViewer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLViewer.cpp  OpenGLViewer.h  SceneTextureShader.cpp  SceneTextureShader.h  Shader.cpp  Shader.h  TextureManager.cpp  TextureManager.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  VTKMeshRenderDelegate.cpp  VTKPlaneRenderDelegate.cpp  VTKRenderDelegate.h  VTKSceneModelRenderDelegate.cpp  VTKStaticSceneObjectRenderDelegate.cpp  VTKViewer.cpp  VTKViewer.h  Viewer.cpp  (+3 more)
SceneModels/: CMakeLists.txt  DeformableSceneObject.cpp  DeformableSceneObject.h  InteractionSceneModel.h  SceneObject.cpp  SceneObject.h  StaticSceneObject.cpp  StaticSceneObject.h  VegaFEMDeformableSceneObject.cpp  VegaFEMDeformableSceneObject.h
Simulators/: CMakeLists.txt  DefaultSimulator.cpp  DefaultSimulator.h  DeformableSceneObject.cpp  DeformableSceneObject.h  DummySimulator.cpp  DummySimulator.h  MyStylus.cpp  MyStylus.h  ObjectSimulator.cpp  ObjectSimulator.h  PBDObjectSimulator.cpp  PBDObjectSimulator.h  PBDSceneObject.cpp  PBDSceneObject.h  SceneObjectDeformable.cpp  SceneObjectDeformable.h  StylusObject.cpp  StylusObject.h  ToolSimulator.cpp  ToolSimulator.h  VegaFEMDeformableSceneObject.cpp  VegaFEMDeformableSceneObject.h  VegaFEMModelSimulator.cpp  VegaFEMModelSimulator.h  VegaFemSceneObject.cpp  VegaFemSceneObject.h  VegaFemSimulator.cpp  VegaFemSimulator.h  VegaObjectConfig.cpp  VegaObjectConfig.h
Solvers/: BackwardGaussSeidel.cpp  BackwardGaussSeidel.h  BackwardSOR.cpp  BackwardSOR.h  CMakeLists.txt  ConjugateGradient.cpp  ConjugateGradient.h  DirectLinearSolver.cpp  DirectLinearSolver.h  ForwardGaussSeidel.cpp  ForwardGaussSeidel.h  ForwardSOR.cpp  ForwardSOR.h  GaussSeidelSolver.cpp  GaussSeidelSolver.h  InexactNewton.cpp  InexactNewton.h  IterativeLinearSolver.cpp  IterativeLinearSolver.h  LinearSolver.cpp  LinearSolver.h  LinearSolver.hpp  NewtonMethod.cpp  NewtonMethod.h  NonLinearSolver.cpp  NonLinearSolver.h  SystemOfEquations.h
Testing/: CMakeLists.txt  ReadPaths.h  ReadSparseMatrix.h  TestMesh.h  path.in
TimeIntegrators/: BackwarEuler.cpp  BackwarEuler.h  CMakeLists.txt  ForwardEuler.cpp  ForwardEuler.h  OdeSystem.cpp  OdeSystem.h  OdeSystemState.cpp  OdeSystemState.h  TimeIntegrator.cpp  TimeIntegrator.h
VTKRendering/: CMakeLists.txt  InitVTKRendering.cpp  InitVTKRendering.h  MeshNodalCoordinates.h  MeshNodalCoordinates.hpp  VTKRendering.h  (+11 more)
(+3834 files in other folders)
